# quickbench

./: .gitignore  CHANGES  CHANGES.md  Makefile  README.md  quickbench.1  quickbench.1.md  quickbench.cabal  stack.yaml  stack912.yaml  stack96.yaml
app/: Main.hs
src/: QuickBench.hs
