name:                quickbench
version:             1.0.1
synopsis:            quick & easy benchmarking of command-line programs
description:
  quickbench produces very simple output (elapsed seconds),
  as quickly as possible (running commands just once by default),
  and tabulates results from multiple executables.
  I find it very useful for quick and dirty, exploratory, and comparative measurements
  that you can understand at a glance.
  Please see the readme for more.
homepage:            https://github.com/simonmichael/quickbench#readme
license:             GPL
license-file:        LICENSE
author:              Simon Michael
maintainer:          simon@joyful.com
copyright:           Copyright: (c) 2008-2016 Simon Michael
category:            Development
build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC==8.0

extra-source-files:
  README.md
  CHANGES.md
  stack.yaml
  quickbench.1

library
  hs-source-dirs:      src
  exposed-modules:     QuickBench
  build-depends:
     base >= 4.7 && < 5
    ,containers
    ,directory
    ,docopt >= 0.7.0.7
    ,pretty-show
    ,process
    ,safe
    ,split
    ,tabular
    ,time
  default-language:    Haskell2010
  ghc-options:         -Wall

executable quickbench
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:
     quickbench
    ,base
    ,process
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite quickbench-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , quickbench
  ghc-options:         -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/simonmichael/quickbench
