cabal-version: 3.0
name:          quickbench
version:       1.1
synopsis:      quick & easy benchmarking of command-line programs
description:
  quickbench times one or more commands,
  producing very simple output (elapsed seconds)
  as quickly as possible (running commands just once by default),
  and tabulates the results.
  It's useful for quick, exploratory, and comparative measurements that can be understood at a glance.
category:      Development
stability:     stable
homepage:      https://github.com/simonmichael/quickbench
bug-reports:   https://github.com/simonmichael/quickbench/issues
author:        Simon Michael <simon@joyful.com>
maintainer:    Simon Michael <simon@joyful.com>
copyright:     Copyright: (c) 2008-2025 Simon Michael and contributors
license:       GPL-3.0-or-later
license-file:  LICENSE
build-type:    Simple
tested-with:   ghc==9.6, ghc==9.8, ghc==9.10, ghc==9.12

extra-source-files:
  README.md
  stack96.yaml
  stack98.yaml
  stack.yaml
  stack912.yaml
  quickbench.1

-- These are also copied to haddock docs.
extra-doc-files:
  CHANGES.md

source-repository head
  type:     git
  location: https://github.com/simonmichael/quickbench

library
  hs-source-dirs:    src
  exposed-modules:   QuickBench
  default-language:  Haskell2010
  ghc-options:       -Wall
  build-depends:
    base >= 4.18 && < 5,
    containers,
    directory,
    docopt >= 0.7.0.7,
    megaparsec,
    pretty-show,
    process,
    safe,
    split,
    tabular,
    time,

executable quickbench
  hs-source-dirs:    app
  main-is:           Main.hs
  default-language:  Haskell2010
  ghc-options:       -Wall
  build-depends:
    quickbench,
    base,
    process,

test-suite quickbench-test
  type:              exitcode-stdio-1.0
  hs-source-dirs:    test
  main-is:           Spec.hs
  default-language:  Haskell2010
  ghc-options:       -Wall
  build-depends:
    base,
    quickbench,
